2005-2-10  Alexander McCormmach <alexander at tunicate dot org>

	* rsvg.c, rsvg-styles.c, rsvg-private.h: Applied patch by "makingnonsense" fixing spelling
	
2005-2-9  Dom Lachowicz <cinamod@hotmail.com>

	* configure.in: Bump version number
	
2005-2-9  Caleb Moore <c.moore@student.unsw.edu.au>	

	* rsvg-paint-server.c: fixed jimmac's gradient problem
	* rsvg-filter.c: fixed Uraeus' reversion

2005-2-9  Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg-styles.c: fixed spelling mistake in visibility property causing bug 166673
	
2005-2-7  Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg-styles.c: made a consistent framework for combining states
	* rsvg-shapes.c: subtle rewrite of <use> to allow things to be instanced before they are actually specified.
	* rsvg.c: treat <a> tag like <g> tag for now
	* rsvg-styles.c: made style override any attributes, as per what the w3 guys told me to do when I asked them what had preference. Now pirate flags and stuff look right.

2005-01-28  Dom Lachowicz <cinamod@hotmail.com>

	* moz-plugin/moz-plugin.c: Code cleanup, work toward getting the plugin
	to print on Unix.
	
2005-01-18  Dom Lachowicz <cinamod@hotmail.com>

	* configure.in: Bump version number
	
2005-01-13  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg.c: bug 163886/163947, from John Spray <jcs116@york.ac.uk>

2005-01-11  Dom Lachowicz <cinamod@hotmail.com>

	* configure.in: Install gtk docs in a standard place that devhelp knows about. From Stephane LOEUILLET <LeRoutier@leroutier.net>
	
2004-12-22  Dom Lachowicz <cinamod@hotmail.com>

	* moz-plugin/moz-plugin.c: Fix bug #161823
	* Makefile.am: bug #158897, from <kou@cozmixng.org>
	
2004-11-29  Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg-shapes.c: made markers work again and inherit from the context that they were specified in, not where they were invoked.
	
2004-11-18  Dom Lachowicz <cinamod@hotmail.com>
